# print-statements-hook

./: .bumpversion.toml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
print_statement_hook/: hook.py
