[project]
name = "print-statements-hook"
version = "0.2.0"
authors = [
  { name = "Kuldeep Modh", email = "kuldeepmodh1823@gmail.com" }
]
description = "A pre-commit hook to detect and prevent print statements in Python code"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "bump-my-version>=1.2.7",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance"
]


[project.scripts]
check-print-statements = "print_statement_hook.hook:check_print_statements"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
